--- a/pom.xml
+++ b/pom.xml
@@ -1,57 +1,25 @@
-<build>
-   <finalName>Unitconversion</finalName>
-   <plugins>
-      <plugin>
-         <groupId>org.codehaus.mojo</groupId>
-         <artifactId>findbugs-maven-plugin</artifactId>
-         <version>${findbugs.version}</version>
-      </plugin>
-      <plugin>
-         <groupId>org.codehaus.mojo</groupId>
-         <artifactId>cobertura-maven-plugin</artifactId>
-         <version>${cobertura.version}</version>
-         <configuration>
-            <formats>
-               <format>xml</format>
-            </formats>
-         </configuration>
-         <executions>
-            <execution>
-               <phase>package</phase>
-               <goals>
-                  <goal>cobertura</goal>
-               </goals>
-            </execution>
-         </executions>
-      </plugin>
-   </plugins>
-</build>
-<reporting>
-   <plugins>
-      <plugin>
-         <groupId>org.codehaus.mojo</groupId>
-         <artifactId>findbugs-maven-plugin</artifactId>
-         <version>${findbugs.version}</version>
-      </plugin>
-      <plugin>
-         <groupId>org.apache.maven.plugins</groupId>
-         <artifactId>maven-checkstyle-plugin</artifactId>
-         <version>${checkstyle.version}</version>
-      </plugin>
-      <plugin>
-         <groupId>org.apache.maven.plugins</groupId>
-         <artifactId>maven-surefire-report-plugin</artifactId>
-         <version>${surefire.reportplugin.version}</version>
-      </plugin>
-      <plugin>
-         <groupId>org.codehaus.mojo</groupId>
-         <artifactId>cobertura-maven-plugin</artifactId>
-         <version>${cobertura.version}</version>
-         <configuration>
-            <formats>
-               <format>xml</format>
-            </formats>
-         </configuration>
-      </plugin>
-   </plugins>
-</reporting>
+<project xmlns="http://maven.apache.org/POM/4.0.0"   
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0   
+http://maven.apache.org/xsd/maven-4.0.0.xsd">  
+  
+  <modelVersion>4.0.0</modelVersion>  
+  
+  <groupId>com.javatpoint.application1</groupId>  
+  <artifactId>my-application1</artifactId>  
+  <version>1.0</version>  
+  <packaging>jar</packaging>  
+  
+  <name>Maven Quick Start Archetype</name>  
+  <url>http://maven.apache.org</url>  
+  
+  <dependencies>  
+    <dependency>  
+      <groupId>junit</groupId>  
+      <artifactId>junit</artifactId>  
+      <version>4.8.2</version>  
+      <scope>test</scope>  
+    </dependency>  
+  </dependencies>  
+  
+</project>  
