--- a/pom.xml
+++ b/pom.xml
@@ -1,25 +1,84 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"   
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0   
-http://maven.apache.org/xsd/maven-4.0.0.xsd">  
-  
-  <modelVersion>4.0.0</modelVersion>  
-  
-  <groupId>com.javatpoint.application1</groupId>  
-  <artifactId>my-application1</artifactId>  
-  <version>1.0</version>  
-  <packaging>jar</packaging>  
-  
-  <name>Maven Quick Start Archetype</name>  
-  <url>http://maven.apache.org</url>  
-  
-  <dependencies>  
-    <dependency>  
-      <groupId>junit</groupId>  
-      <artifactId>junit</artifactId>  
-      <version>4.8.2</version>  
-      <scope>test</scope>  
-    </dependency>  
-  </dependencies>  
-  
-</project>  
+<project>
+<plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>findbugs-maven-plugin</artifactId>
+            <version>2.4.0</version>
+            <executions>
+                <execution>
+                    <id>findbug</id>
+                    <phase>verify</phase>
+                    <goals>
+                        <goal>check</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <configuration>
+                <effort>Max</effort>
+                <threshold>Low</threshold>
+                <findbugsXmlOutputDirectory>
+                    ${project.build.directory}/findbugs
+                </findbugsXmlOutputDirectory>
+                <failOnError>false</failOnError>
+            </configuration>
+        </plugin>
+
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>xml-maven-plugin</artifactId>
+            <version>1.0</version>
+            <executions>
+                <execution>
+                    <phase>verify</phase>
+                    <goals>
+                        <goal>transform</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <configuration>
+                <transformationSets>
+                    <transformationSet>
+                        <dir>${project.build.directory}/findbugs</dir>
+                        <outputDir>${project.build.directory}/findbugs</outputDir>
+                        <stylesheet>fancy-hist.xsl</stylesheet>
+                        <fileMappers>
+                            <fileMapper
+                                implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
+                                <targetExtension>.html</targetExtension>
+                            </fileMapper>
+                        </fileMappers>
+                    </transformationSet>
+                </transformationSets>
+            </configuration>
+            <dependencies>
+                <dependency>
+                    <groupId>com.google.code.findbugs</groupId>
+                    <artifactId>findbugs</artifactId>
+                    <version>2.0.0</version>
+                </dependency>
+            </dependencies>
+        </plugin>
+   
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>findbugs-maven-plugin</artifactId>
+            <version>3.0.3</version>
+            <executions>
+                <execution>
+                    <id>failing-on-high</id>
+                    <phase>install</phase>
+                    <goals>
+                        <goal>findbugs</goal>
+                        <goal>check</goal>
+                    </goals>
+                    <configuration>
+                        <effort>Max</effort>
+                        <threshold>Low</threshold>
+                        <failOnError>true</failOnError>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+  <findbugsXmlOutput>true</findbugsXmlOutput>
+          <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
+          <xmlOutput>true</xmlOutput>
+</project>
