--- a/pom.xml
+++ b/pom.xml
@@ -1,84 +1,32 @@
 <project>
-<plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>findbugs-maven-plugin</artifactId>
-            <version>2.4.0</version>
-            <executions>
-                <execution>
-                    <id>findbug</id>
-                    <phase>verify</phase>
-                    <goals>
-                        <goal>check</goal>
-                    </goals>
-                </execution>
-            </executions>
-            <configuration>
-                <effort>Max</effort>
-                <threshold>Low</threshold>
-                <findbugsXmlOutputDirectory>
-                    ${project.build.directory}/findbugs
-                </findbugsXmlOutputDirectory>
-                <failOnError>false</failOnError>
-            </configuration>
-        </plugin>
-
-        <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>xml-maven-plugin</artifactId>
-            <version>1.0</version>
-            <executions>
-                <execution>
-                    <phase>verify</phase>
-                    <goals>
-                        <goal>transform</goal>
-                    </goals>
-                </execution>
-            </executions>
-            <configuration>
-                <transformationSets>
-                    <transformationSet>
-                        <dir>${project.build.directory}/findbugs</dir>
-                        <outputDir>${project.build.directory}/findbugs</outputDir>
-                        <stylesheet>fancy-hist.xsl</stylesheet>
-                        <fileMappers>
-                            <fileMapper
-                                implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
-                                <targetExtension>.html</targetExtension>
-                            </fileMapper>
-                        </fileMappers>
-                    </transformationSet>
-                </transformationSets>
-            </configuration>
-            <dependencies>
-                <dependency>
-                    <groupId>com.google.code.findbugs</groupId>
-                    <artifactId>findbugs</artifactId>
-                    <version>2.0.0</version>
-                </dependency>
-            </dependencies>
-        </plugin>
-   
-        <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>findbugs-maven-plugin</artifactId>
-            <version>3.0.3</version>
-            <executions>
-                <execution>
-                    <id>failing-on-high</id>
-                    <phase>install</phase>
-                    <goals>
-                        <goal>findbugs</goal>
-                        <goal>check</goal>
-                    </goals>
-                    <configuration>
-                        <effort>Max</effort>
-                        <threshold>Low</threshold>
-                        <failOnError>true</failOnError>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
-  <findbugsXmlOutput>true</findbugsXmlOutput>
-          <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
-          <xmlOutput>true</xmlOutput>
+  ...
+  <build>
+    ...
+    <plugins>
+      ...
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.7</version>
+        <configuration>
+          <instrumentation>
+            <ignores>
+              <ignore>com.example.boringcode.*</ignore>
+            </ignores>
+            <excludes>
+              <exclude>com/example/dullcode/**/*.class</exclude>
+              <exclude>com/example/**/*Test.class</exclude>
+            </excludes>
+          </instrumentation>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>clean</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
