--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <plugins>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
-          <artifactId>findbugs-maven-plugin</artifacId>
+          <artifactId>findbugs-maven-plugin</artifactId>
           <version>3.0.4</version>
           <configuration>
             <effort>Max</effort>
