--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,6 @@
     <groupId>sri</groupId>
     <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-  
 <reporting>
     <plugins>
         <plugin>
@@ -14,6 +13,10 @@
           <configuration>
             <effort>Max</effort>
             <threshold>Low</threshold>
+          <properties>
+            <maven.compiler.source>1.6</maven.compiler.source>
+            <maven.compiler.target>1.6</maven.compiler.target>
+           </properties>
           </configuration>
       </plugin>
   </plugins>
