--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,13 @@
 <reporting>
     <plugins>
         <plugin>
+            <groupId>org.jenkins-ci.tools</groupId>
+            <artifactId>maven-hpi-plugin</artifactId>
+            <configuration>
+                <pluginFirstClassLoader>true</pluginFirstClassLoader>
+            </configuration>
+        </plugin>
+        <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>findbugs-maven-plugin</artifactId>
           <version>3.0.4</version>
